welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: not found: value marquer
marquer()
^Program:20: error: not found: value marquer
marquer()
^