welcome.lessons.welcome.instructions.Instructions.scala.code
marquer()

droite()
avance()
avance()

gauche()
avance()
avance()

gauche()
avance()
avance()

gauche()
avance()

gauche()
marquer()
avance()
gauche()